--- a/_includes/head.html
+++ b/_includes/head.html
@@ -61,5 +61,9 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
-    <script></script>
+    <script>
+        
+        console.log("welcome to my blog");
+
+    </script>
 </head>
