--- a/_includes/head.html
+++ b/_includes/head.html
@@ -61,9 +61,13 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
-    <script>
-        
-        console.log("welcome to my blog");
+    <script></script>
 
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({
+              google_ad_client: "ca-pub-5057660822223643",
+              enable_page_level_ads: true
+         });
     </script>
 </head>
