--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -197,7 +197,7 @@
 <!-- Handle Language Change -->
 <script type="text/javascript">
     // get nodes
-    var $zh = document.querySelector(".zh");
+    var $zh = document.querySelector(".ko");
     var $en = document.querySelector(".en");
     var $select = document.querySelector("select");
 
@@ -232,7 +232,7 @@
     // handle select change
     function onLanChange(index){
         if(index == 0){
-            _hash = "#zh"
+            _hash = "#ko"
         }else{
             _hash = "#en"
         }
