--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,6 +21,9 @@
             <div class="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
+                        <a href="https://github.com/Simplify-study/Simplify-study.github.io" target="_blank" rel="noopener noreferrer">GitHub</a>
+                    </li>
+                    <li>
                         <a href="{{ site.baseurl }}/">Home</a>
                     </li>
                     {% for page in site.pages %}
