--- a/_includes/intro-header.html
+++ b/_includes/intro-header.html
@@ -92,12 +92,12 @@
 
 {% if include.type == 'page' %}
 <style type="text/css">
-    {% if page.header-mask %}
+    {% if site.header-mask %}
     header.intro-header .header-mask{
         width: 100%;
         height: 100%;
         position: absolute;
-        background: rgba(0,0,0, {{ page.header-mask }});
+        background: rgba(0,0,0, {{ site.header-mask }});
     }
     {% endif %}
 </style>
